--- a/src/css/style.css
+++ b/src/css/style.css
@@ -680,11 +680,12 @@ todo: set up the media queries
 @media (max-width: 1023px) {
   
   .container{
-    width: 100%;
+    width: 90%;
   }
   header {
     flex-direction: column;
     flex-wrap: nowrap;
+    width: 100% !important;
     gap: 20px;
     height: auto;
     background-color: var(--background-color);
@@ -738,5 +739,11 @@ todo: set up the media queries
   .video-holder{
     padding-left:15px ;
     padding-right:15px ;
+  }
+  .articles {
+    grid-template-columns: 1fr;
+  }
+  .article-card {
+    grid-template-columns: 1fr;
   }
 }
