--- a/src/css/style.css
+++ b/src/css/style.css
@@ -611,10 +611,43 @@ grid-template-columns: 30% 70%;
 gap: 20px;
 min-height: 100vh;
 }
-.post-filter{
+.aside{
   background-color: var(--background-color);
   box-shadow: var(--shadow);
   color: var(--text-color);
+}
+.aside .categories {
+  padding: 30px 20px;
+}
+
+.aside :is(h5) {
+  text-transform: uppercase;
+  font-size: 20px;
+  text-align: center;
+}
+.aside .categories ul {
+ padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+ row-gap: 30px;
+ column-gap: 10px;
+}
+.aside .categories ul li {
+  display: inline-block;
+  flex: 1 1 fit-content;
+}
+.aside a {
+  border: 1px solid var(--main-color);
+  text-transform: capitalize;
+  padding: 5px 10px;
+  transition: var(--transition-dur);
+  -webkit-transition: var(--transition-dur);
+  -moz-transition: var(--transition-dur);
+  -ms-transition: var(--transition-dur);
+  -o-transition: var(--transition-dur);
+}
+.aside a:hover {
+  color: var(--main-color);
 }
 .title {
   margin-bottom: 30px;
@@ -681,11 +714,14 @@ min-height: 100vh;
   gap: 30px;
   flex-wrap: wrap;
 }
-.news-letter input[type="email"] {
+.news-letter input[type="email"], .news-letter input[type="email"]:is(:focus,:hover){
   width: 40%;
   padding: 8px 20px;
-  /* flex-shrink: 1; */
   flex-basis: 350px;
+  box-shadow: var(--shadow);
+  outline: none;
+  border: 1px solid var(--text-color);
+  color: black;
 }
 .news-letter form button {
   padding: 6px 10px;
@@ -700,6 +736,8 @@ min-height: 100vh;
   -moz-transition: var(--transition-dur);
   -ms-transition: var(--transition-dur);
   -o-transition: var(--transition-dur);
+color: var(--text-color);
+box-shadow: var(--shadow);
 }
 .news-letter form button:hover {
   border: 1px solid var(--text-color);
