--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,11 +3,11 @@
 
 /* set up the root variables */
 :root {
-  --main-color: /*rgba(79, 155, 115, 1)*/;
+  --main-color: /*rgba(79, 155, 115, 1)*/ ;
   --secondary-color: #3b3d5b;
   --active-color: #3ccbbd;
   --text-color: rgba(28, 28, 28, 1);
-  --background-color:/*rgba(79, 155, 115, 1)*/;
+  --background-color:/*rgba(79, 155, 115, 1)*/ ;
   /* --light-text-color: white; */
   --transition-dur: 0.5s;
   --shadow: 1.2px 0.1px 2.2px rgba(0, 0, 0, 0.02),
@@ -37,7 +37,7 @@ body {
   background-color: var(--background-color);
 }
 .mx-auto {
-  display: block !important; 
+  display: block !important;
   margin-left: auto !important;
   margin-right: auto !important;
 }
@@ -63,7 +63,7 @@ body {
 }
 .container {
   width: 80%;
- margin: auto;
+  margin: 0% auto;
 }
 .section-title {
   margin: auto;
@@ -75,11 +75,11 @@ body {
   width: fit-content;
   padding: 10px 15px;
   cursor: pointer;
-  transition: 0.75s ;
-  -webkit-transition: 0.75s ;
-  -moz-transition: 0.75s ;
-  -ms-transition: 0.75s ;
-  -o-transition: 0.75s ;
+  transition: 0.75s;
+  -webkit-transition: 0.75s;
+  -moz-transition: 0.75s;
+  -ms-transition: 0.75s;
+  -o-transition: 0.75s;
   text-align: center;
 }
 .section-title::after,
@@ -172,12 +172,15 @@ body {
 }
 .btn:hover::before,
 .btn:hover::after {
-  width:50%;
+  width: 50%;
 }
 .hr {
-  width: 100%;
-  height: 10px;
+  width: 50%;
+  height: 5px;
+  outline: none;
+  border: none;
   background-color: var(--main-color);
+  margin-top: 20px;
 }
 /* header part start here */
 header {
@@ -389,7 +392,7 @@ setting of website colors and modes : dark and light
   background-color: var(--active-color);
 }
 #go-top i {
-  color:inherit;
+  color: inherit;
 }
 .settings {
   display: flex;
@@ -610,14 +613,14 @@ setting of website colors and modes : dark and light
 }
 /* videos section ends here */
 /* latest Articles starts here */
-.articles{
-display: grid;
-grid-template-columns: 30% 70%;
-gap: 20px;
-align-items: start;
-min-height: 100vh;
+.articles {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  gap: 20px;
+  align-items: start;
+  min-height: 100vh;
 }
-.aside{
+.aside {
   background-color: var(--background-color);
   box-shadow: var(--shadow);
   color: var(--text-color);
@@ -625,18 +628,12 @@ min-height: 100vh;
 .aside .categories {
   padding: 30px 20px;
 }
-
-.aside :is(h5) {
-  text-transform: uppercase;
-  font-size: 20px;
-  text-align: center;
-}
 .aside .categories ul {
- padding: 20px 0;
+  padding: 20px 0;
   display: flex;
   flex-wrap: wrap;
- row-gap: 30px;
- column-gap: 10px;
+  row-gap: 30px;
+  column-gap: 10px;
 }
 .aside .categories ul li {
   display: inline-block;
@@ -654,6 +651,85 @@ min-height: 100vh;
 }
 .aside a:hover {
   color: var(--main-color);
+}
+
+aside h5 {
+  text-align: left;
+  color: var(--text-color);
+  border-bottom: 4px dashed var(--main-color);
+  width: fit-content;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.facebook {
+  padding: 0px 10px;
+  margin-bottom: 20px;
+}
+
+.facebook_page {
+  width: 100%;
+  margin-top: 20px;
+  position: relative;
+  border: 2px solid var(--main-color);
+}
+.cover-img {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
+  filter: grayscale(0.4);
+  -webkit-filter: grayscale(0.4);
+}
+.page_logo {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: white;
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+  object-position: center;
+  box-shadow: var(--shadow);
+}
+.page_name {
+  position: absolute;
+  top: 10px;
+  left: 85px;
+  color: white;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 3px black;
+}
+.page_followers {
+  position: absolute;
+  top: 30px;
+  left: 85px;
+  color: white;
+  text-transform: lowercase;
+  text-shadow: 2px 2px 3px black;
+}
+.more_info {
+  width: 100%;
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 5px;
+}
+.follow_page_btn {
+  color: white !important;
+  background-color: gray;
+  border: none !important;
+  border-radius: 3px;
+  font-size: 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+.follow_page_btn i {
+  color: white;
 }
 .title {
   margin-bottom: 30px;
@@ -680,11 +756,40 @@ min-height: 100vh;
   -ms-transform: scale(1.01);
   -o-transform: scale(1.01);
 }
+.article-card:hover .post_overlay {
+  opacity:1;
+ }
+.image-container {
+  position: relative;
+}
 .article-card img {
   max-width: 100%;
   height: 100%;
+  width: 100%;
   object-fit: cover;
+  z-index:-1;
 }
+.post_overlay {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.767);
+  display:grid;
+  place-items:center;
+  transition:0.5s;
+  -webkit-transition:0.5s;
+  -moz-transition:0.5s;
+  -ms-transition:0.5s;
+  -o-transition:0.5s;
+  opacity:0;
+}
+.post_overlay  i {
+  font-size:30px;
+  color:var(--main-color);
+}
+
 .content {
   padding: 5px;
   display: flex;
@@ -698,6 +803,16 @@ min-height: 100vh;
 .content p {
   line-height: 1.6;
   padding: 10px 0;
+}
+.content .readMore {
+  color: var(--main-color);
+  font-size: 16px;
+  margin-top: 10px;
+}
+.content .readMore i {
+  color: inherit;
+  font-size: inherit;
+  margin-left: 5px;
 }
 .content .post-date {
   font-size: small;
@@ -720,7 +835,8 @@ min-height: 100vh;
   gap: 30px;
   flex-wrap: wrap;
 }
-.news-letter input[type="email"], .news-letter input[type="email"]:is(:focus,:hover){
+.news-letter input[type="email"],
+.news-letter input[type="email"]:is(:focus, :hover) {
   width: 40%;
   padding: 8px 20px;
   flex-basis: 350px;
@@ -742,8 +858,8 @@ min-height: 100vh;
   -moz-transition: var(--transition-dur);
   -ms-transition: var(--transition-dur);
   -o-transition: var(--transition-dur);
-color: var(--text-color);
-box-shadow: var(--shadow);
+  color: var(--text-color);
+  box-shadow: var(--shadow);
 }
 .news-letter form button:hover {
   border: 1px solid var(--text-color);
@@ -762,45 +878,172 @@ footer {
   /* margin-top: 30px; */
   padding: 30px;
   width: 100%;
+  position: relative;
+}
+.cols {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.col {
+  flex: 1 200px;
+  background-color: red;
 }
 
-
-
+.copyright {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  line-height: 2;
+  color: var(--text-color);
+  font-size: 18px;
+}
 /* footer section ends here  */
+/*! single post page starts here */
+main.singlePost {
+  padding-top: 30px;
+  min-height: 100vh;
+}
+@media (max-width: 767px) {
+}
 
+/* Styles for screens between 768px and 1023px */
+@media (max-width: 1023px) {
+  main.singlePost {
+    padding-top: 100px;
+  }
+}
 
+.article-title {
+  line-height: 1.8;
+  color: var(--text-color);
+}
+.article-options ul {
+  margin-top: 20px;
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.article-options ul li {
+  font-size: 13px;
+  padding: 10px;
+  letter-spacing: 2px;
+  text-transform: lowercase;
+  color: var(--main-color);
+}
+.article-options ul li a {
+  color: inherit;
+}
+.article-options ul li i {
+  padding-right: 10px;
+  color: var(--main-color);
+}
 
+.article-img {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.singlePost-content {
+  font-size: 18px;
+  text-align: justify;
+  line-height: 2;
+}
 
+.articlefooter {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+.comment,
+.relatedArticles {
+  flex: 1;
+}
 
+.comment h3,
+.relatedArticles h3 {
+  opacity: 0.8;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.comment form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+}
+.comment form input {
+  height: 39px;
+  padding: 15px 20px;
+  outline: none;
+  border: 1px solid var(--text-color);
+  text-transform: capitalize;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
 
+.comment form button {
+  height: 39px;
+  padding: 15px 20px;
+  text-transform: capitalize;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase !important;
+}
+.comment textarea {
+  display: inline-block;
+  resize: vertical;
+  max-width: 100%;
+  min-height: 100px;
+  max-height: 400px;
+  padding: 10px 20px;
+  border: 1px solid var(--text-color);
+  outline: none;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+.related img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  box-shadow: var(--shadow);
+}
+.related a {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 2;
+  padding-left: 10px;
+  color: var(--main-color);
+}
 
+/*! single post page starts here */
 
+/* ? 404 page code starts here */
+main.notFound {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+main.notFound img {
+  width: 40%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* ? 404 page code ends here */
 
 /* *Dashboard css starts here */
 
@@ -822,12 +1065,12 @@ footer {
   top: 10px;
   cursor: pointer;
   font-size: 20px;
-} 
+}
 .dashboard .left-nav .left-menu {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
-  gap: 10px; 
+  gap: 10px;
 }
 .dashboard .left-nav .left-menu li {
   padding: 10px 25px;
@@ -841,7 +1084,7 @@ footer {
   -ms-transition: var(--transition-dur);
   -o-transition: var(--transition-dur);
 }
-.dashboard .left-nav .left-menu li:is(.active ,:hover){
+.dashboard .left-nav .left-menu li:is(.active, :hover) {
   background-color: var(--active-color);
 }
 .dashboard .left-menu li span {
@@ -867,13 +1110,11 @@ section.home {
 */
 /* Styles for screens smaller than 768px */
 @media (max-width: 767px) {
-  
 }
 
 /* Styles for screens between 768px and 1023px */
 @media (max-width: 1023px) {
-  
-  .container{
+  .container {
     width: 90%;
   }
   header {
@@ -885,7 +1126,7 @@ section.home {
     background-color: var(--background-color);
     z-index: 800;
     position: fixed;
-    box-shadow : 0px 10px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.2);
     padding: 0;
   }
   .logo {
@@ -930,9 +1171,9 @@ section.home {
     display: none;
   }
 
-  .video-holder{
-    padding-left:15px ;
-    padding-right:15px ;
+  .video-holder {
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .articles {
     grid-template-columns: 1fr;
@@ -941,8 +1182,3 @@ section.home {
     grid-template-columns: 1fr;
   }
 }
-
-
-
-
-
