--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1125,6 +1125,92 @@ main.notFound h1 {
 
 /* ? 404 page code ends here */
 
+/* ! login page starts here  */
+.login {
+  width: 80%;
+  margin: 0 auto;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  align-items: center;
+}
+.login img {
+  max-width: 80%;
+}
+.login_form h1 {
+  text-transform: uppercase;
+  color: var(--main-color);
+  margin-bottom: 20px;
+  text-align: center;
+}
+.login form {
+  display: flex;
+  flex-direction: column;
+}
+.login form .input-field {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.login form .input-field i {
+  position: absolute;
+  top: 13px;
+  color: var(--main-color);
+}
+.login form .input-field i:is(.email, .password) {
+  left: 10px;
+}
+.login form .input-field i.toggle_password {
+  right: 10px;
+  cursor: pointer;
+}
+.login form input[type="email"],
+.login #password {
+  padding: 8px 32px;
+  width: 100%;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  outline: none;
+  border: 1px solid var(--text-color);
+}
+
+.login form input[type="submit"] {
+  background-color: var(--main-color);
+  color: var(--text-color);
+  padding: 10px 50px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  align-self: center;
+  transition: var(--transition-dur);
+  -webkit-transition: var(--transition-dur);
+  -moz-transition: var(--transition-dur);
+  -ms-transition: var(--transition-dur);
+  -o-transition: var(--transition-dur);
+}
+.login form input[type="submit"]:hover {
+  background-color: color-mix(in srgb, var(--main-color) 100%,  black 30%);
+}
+.login a {
+  text-transform: capitalize;
+  font-size: 14px;
+  margin-top: 30px;
+  transition: var(--transition-dur);
+  -webkit-transition: var(--transition-dur);
+  -moz-transition: var(--transition-dur);
+  -ms-transition: var(--transition-dur);
+  -o-transition: var(--transition-dur);
+}
+.login a:hover {
+  color: var(--main-color);
+}
+.login a i {
+  margin-right: 10px;
+  color: inherit;
+}
+/* ! login page ends here  */
 /* *Dashboard css starts here */
 
 .dashboard {
